--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=500px, maximum-scale=1.0" />
-  <title>Home</title>
+  <title>Tattoo Veronique</title>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
@@ -64,7 +64,7 @@
               </li>
 
               <li class="nav-item h5 my-2 mx-2">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/about">
                   O nas
                 </a>
               </li>
