--- a/templates/sketches.html
+++ b/templates/sketches.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=500px, maximum-scale=1.0" />
-    <title>Gallery</title>
+    <title>Szkice</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
@@ -271,7 +271,7 @@
               </li>
 
               <li class="nav-item h5 my-2 mx-2">
-                <a class="nav-link" href="#">O nas</a>
+                <a class="nav-link" href="/about">O nas</a>
               </li>
 
               <li class="nav-item dropdown h5 my-2 mx-2" >
