--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -9,56 +9,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
     <script type="text/javascript" src="../static/js/jquery.min.js"></script>
     <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 
 
     <script type="text/javascript" src="../static/js/script.js"></script>
-
     <style>
-    .drop-text{
-      color: #BDBDBD !important;
-    }
-
-    .drop-text:hover{
-      background: rgba(33,33,33,0.7) !important;
-      color: #eeeeee !important;
-    }
-
-    .dropdown-toggle{
-      color:#9e9e9e !important;
-    }
-
-    .dropdown-toggle:hover{
-      color:#BDBDBD  !important;
-    }
-
-    .dropdown-menu{
-      background-color: rgba(0,0,0,0.5) !important;
-    }
-
-    .navbar-brand{
-      color:#BDBDBD;
-    }
-
-    .fix-but {
-      position: fixed;
-      width: 100px;
-      height: 100px;
-      right: 1%;
-      bottom: 1%;
-      font-size:4rem;
-      color:#BDBDBD;
-      transition: font-size .5s, right .5s, bottom .5s;
-    }
-
-    .fix-but:hover{
-      color:#BDBDBD;
-    }
-
     .fade-once-1 {
       opacity: 0;
       animation: fadeImg 1s ease-in-out forwards;
@@ -76,22 +35,6 @@
 
     .fade-500 {
       opacity: 1;
-    }
-
-    @media (min-width: 1025px) {
-      .zoom {
-        transition: transform .5s; /* Animation */
-      }
-
-      .zoom:hover {
-        transform: scale(1.3);
-      }
-      .fix-but:hover{
-        right: 3%;
-        bottom: 4%;
-        color:#757575;
-        font-size: 5rem;
-      }
     }
 
     body {
@@ -138,25 +81,22 @@
       background-size: cover;
     }
 
-    .btn-main {
-      width: 45vh;
-      height: 10vh;
-      font-size : 20px;
-      border-radius: 8px;
-      border-color: #9E9E9E;
-      transition: transform .5s;
-      background: rgba(0,0,0,0);
-      color: #828282;
-      text-align: center;
-      margin-top:5vh;
+    @media (min-width: 992px) {
+      .masthead {
+        height: 100vh;
+        padding: 0;
+      }
+      .h1-grad {
+        font-size: 5rem;
+        line-height: 5rem;
+        letter-spacing: 0.8rem;
+      }
+      .h1-grad-about {
+        font-size: 5rem;
+        line-height: 5rem;
+        letter-spacing: 0.8rem;
+      }
     }
-
-    .btn-main:hover {
-      background: rgba(33,33,33,0.7);
-      transform: scale(1.2);
-      color: #BDBDBD;
-    }
-
     @media (min-width: 400px) {
       .masthead {
         height: 120vh;
@@ -168,24 +108,30 @@
       background-color: rgba(0,0,0,0.5);
     }
 
-    @media (max-width: 1024px) {
-      .h1-grad {
-        font-size: 6rem;
-        line-height: 6rem;
-        letter-spacing: 0.8rem;
+    @media (max-width: 768px) {
+      .navbar-brand {
+        font-size:30px;
       }
+      .h1-grad{
+        font-size: 3rem;
+        line-height: 3rem;
+      }
+      .header {
+        color:#E0E0E0;
+        font-size: 7vh;
+      }
+    }
+
+    @media (max-width: 1024px) {
       .navbar-brand {
         font-size:40px;
-      }
-      .drop-text{
-        font-size:30px !important;
       }
       .nav-link {
         font-size:40px;
       }
       .btn-main {
         width:35vh;
-        font-size:30px;
+        font-size:35px;
       }
       .btn-mini{
         width:10vh;
@@ -197,32 +143,6 @@
       }
       section {
         margin-top:8vh;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .h1-grad {
-        font-size: 5rem;
-        line-height: 5rem;
-        letter-spacing: 0.8rem;
-      }
-      .navbar-brand {
-        font-size:30px;
-      }
-      .drop-text{
-        font-size:30px !important;
-      }
-
-      .h1-grad{
-        font-size: 3rem;
-        line-height: 3rem;
-      }
-      .header {
-        color:#E0E0E0;
-        font-size: 7vh;
-      }
-      .item {
-        margin-left: 0.8rem;
       }
     }
 
@@ -255,12 +175,12 @@
 <body>
 
   <header>
-    <nav class="navbar navbar-custom fixed-top navbar-expand-xl navbar-dark py-4 py-xl-1">
+    <nav class="navbar navbar-custom fixed-top navbar-expand-lg navbar-dark py-4 py-xl-1">
       <div class="container-fluid">
           <a class="navbar-brand" href="/">Veronique</a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarLinksLeft,#NavbarLinksRight">
-            <span class="navbar-toggler-icon" style="width:50px;height:50px;"></span>
+            <span class="navbar-toggler-icon" style="width:70px;height:70px;"></span>
           </button>
 
           <div class="collapse navbar-collapse justify-content-end" id="NavbarLinksRight">
@@ -274,20 +194,8 @@
                 <a class="nav-link" href="/about">O nas</a>
               </li>
 
-              <li class="nav-item dropdown h5 my-2 mx-2" >
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Galeria
-                </a>
-
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item drop-text" href="/tattoos">
-                    Tatuaże
-                  </a>
-                  <a class="dropdown-item drop-text" href="/sketches">
-                    Szkice
-                  </a>
-                </div>
+              <li class="nav-item h5 my-2 mx-2">
+                <a class="nav-link" href="/gallery">Galeria</a>
               </li>
 
               <li class="nav-item h5 my-2 mx-2">
@@ -315,73 +223,62 @@
 
   </header>
 
-  <header class="container-fluid masthead fade-once-1 galeria">
+  <header class="container-fluid masthead fade-once-1">
     <div class="d-flex h-100 align-items-center">
 
       <div class="mx-auto text-center">
 
-        <h1 class="h1-grad mx-auto my-0 text-uppercase">Szkice</h1>
+        <h1 class="h1-grad mx-auto my-0 text-uppercase">Galeria</h1>
 
       </div>
 
     </div>
   </header>
 
-  <a class="fix-but fade-once-1" href="/order">
-    <i class="bi bi-chat-right-dots-fill but-cont"></i>
-  </a>
-
   <section class="photo-gallery container">
 
     <div class="row fade-500 justify-content-center text-center mb-5" >
-
-      <h1 class="header">Galeria</h1>
+      <h1 class="header">Tatuaże</h1>
       <hr style="color:#E0E0E0; width:50%">
-      <div>
-        <button type="button" class="btn-main" onclick="document.location.href='tattoos'">
-          Zobacz tatuaże
-        </button>
-      </div>
-
     </div>
 
     <div class="row photos">
       <div class="row fade-500">
-          <div class="col-lg-6 col-xl-3 item">
+          <div class="col-sm-6 col-md-4 col-lg-3 item">
           <a href="../static/img/galery/eskiz.jpg" data-lightbox="photos">
-             <img class="img-fluid zoom" src="../static/img/galery/eskiz.jpg">
+             <img class="img-fluid" src="../static/img/galery/eskiz.jpg">
           </a>
         </div>
 
-        <div class="col-lg-6 col-xl-3 item">
+        <div class="col-sm-6 col-md-4 col-lg-3 item">
           <a href="../static/img/galery/tattooDot.jpg" data-lightbox="photos">
-             <img class="img-fluid zoom" src="../static/img/galery/tattooDot.jpg">
+             <img class="img-fluid" src="../static/img/galery/tattooDot.jpg">
           </a>
         </div>
 
-        <div class="col-lg-6 col-xl-3 item">
+        <div class="col-sm-6 col-md-4 col-lg-3 item">
           <a href="../static/img/galery/eskiz.jpg" data-lightbox="photos">
-            <img class="img-fluid zoom" src="../static/img/galery/eskiz.jpg">
+            <img class="img-fluid" src="../static/img/galery/eskiz.jpg">
           </a>
         </div>
 
-        <div class="col-lg-6 col-xl-3 item">
+        <div class="col-sm-6 col-md-4 col-lg-3 item">
           <a href="../static/img/galery/tattooDot.jpg" data-lightbox="photos">
-            <img class="img-fluid zoom" src="../static/img/galery/tattooDot.jpg">
+            <img class="img-fluid" src="../static/img/galery/tattooDot.jpg">
           </a>
         </div>
       </div>
 
       <div class="row fade-500">
-        <div class="col-lg-6 col-xl-3 item">
+        <div class="col-sm-6 col-md-4 col-lg-3 item">
           <a href="../static/img/galery/tattooDot.jpg" data-lightbox="photos">
-            <img class="img-fluid zoom" src="../static/img/galery/tattooDot.jpg">
+            <img class="img-fluid" src="../static/img/galery/tattooDot.jpg">
           </a>
         </div>
 
-        <div class="col-lg-6 col-xl-3 item">
+        <div class="col-sm-6 col-md-4 col-lg-3 item">
           <a href="../static/img/galery/tattooDot.jpg" data-lightbox="photos">
-            <img class="img-fluid zoom" src="../static/img/galery/tattooDot.jpg">
+            <img class="img-fluid" src="../static/img/galery/tattooDot.jpg">
           </a>
         </div>
       </div>
